[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/chr.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.9978, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 36.8243 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="chr" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 13 )
character = 1

[node name="weapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 13 )

[node name="walking_time" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true

[node name="vision" type="RayCast2D" parent="."]
enabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="sound" type="AudioStreamPlayer" parent="."]
volume_db = 6.0
bus = "Dialogs"

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="walking_time" to="." method="_on_walking_time_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
